--- a/IdentitySkillUp/Views/Home/Privacy.cshtml
+++ b/IdentitySkillUp/Views/Home/Privacy.cshtml
@@ -3,4 +3,11 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<h2>Authenticated</h2>
+<ul>
+    @foreach (var claim in User.Claims)
+    {
+        <li><strong>@claim.Type</strong>: @claim.Value</li>
+
+    }
+</ul>
