--- a/IdentitySkillUp/Views/Home/ResetPassword.cshtml
+++ b/IdentitySkillUp/Views/Home/ResetPassword.cshtml
@@ -1,33 +1,34 @@
-﻿@model IdentitySkillUp.Models.LoginModel
+﻿@model IdentitySkillUp.Models.ResetPasswordModel
 
 @{
-    ViewData["Title"] = "Login";
+    ViewData["Title"] = "ResetPassword";
 }
 
-<h1>Login</h1>
+<h1>ResetPassword</h1>
 
-<h4>LoginModel</h4>
+<h4>ResetPasswordModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Login" method="post">
+        <form asp-action="ResetPassword">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="UserName" class="control-label"></label>
-                <input asp-for="UserName" class="form-control" />
-                <span asp-validation-for="UserName" class="text-danger"></span>
-            </div>
+            <input asp-for="Token" type="hidden" />
+            <input asp-for="Email" type="hidden" />
             <div class="form-group">
                 <label asp-for="Password" class="control-label"></label>
                 <input asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="ConfirmPassword" class="control-label"></label>
+                <input asp-for="ConfirmPassword" class="form-control" />
+                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
             <div asp-validation-summary="All"></div>
         </form>
-        <a asp-action="ForgotPassword">Forgot Password></a>
     </div>
 </div>
 
